--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img src="images/king2.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/king3.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/king4.png" width="210" height="210" alt="knowHimBetter"/>
-            <p>Story about his life and education</p>
+            <p>Story about his life, education, and aspirations.</p>
         </div>
         
         <div id="icons">
