added an image again in the family

--- a/gallery.html
+++ b/gallery.html
@@ -33,6 +33,7 @@
             
             <h2>FAMILY</h2>
             <img src="images/king5.png" width="210" height="210" alt="kenneth"/>
+            <img src="images/fam1.png" width="210" height="210" alt="kenneth"/>
             
             <h2>FRIENDS</h2>
             <img src="images/king.png" width="210" height="210" alt="kenneth"/>
