adding more description in about.html

--- a/about.html
+++ b/about.html
@@ -33,6 +33,8 @@
 
             <p>I am Kenneth Celocia, taking up a bachelor's degree in Information Technology at the University of Southeastern Philippines. I finished my elementary education at the Apokon Elementary School in Tagum City. Also finished my high school at the Sta. Ana National High School and placed 11th amongst the 1,496 graduates at that year. Joined a competition in high school particularly spelling bee, I was decared as first runner up later at the event. I joined a competition in college also in line with the literary arts, particularly in essay writing, I was hailed as a 2nd placer at my first try and I placed 7th at my 2nd try.</p>
             <p>I was born on the 9th of December, year 1997 in Panabo City, Davao del Norte. I grew up with a simple life with my mom and grandmother. They are my source of happiness and strength. I grew up without my dad's presence since he went offshore and worked in Japan to supply our needs. But it did not hinder our love and support since, by the use of technology, we are able to communicate. Distance has nothing to do with love and compassion.</p>
+            <p>What I like about the world is being here in the world. Because I have witnessed that some people, who happen to be living in this wonderful world, do not value the goodness that this world offers. It is so nice to be living in the world where you are able to see your loved ones, smiling at you and giving you the courage to improve my studies even more. </p>
+            
         </div>
     </body>
 </html>
