--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         
         <div id="detailsAtHome2">
-            <a href="about.html"><h2>Be An Inspiration</h2></a>
+            <a href="about.html"><h2>Be An Inspiration to Others</h2></a>
             <img src="images/king2.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/king4.png" width="210" height="210" alt="kenneth"/>
             <p>"Dreams and dedication are a powerful combination." - William Longgood</p>
