--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         
         <div id="detailsAtHome2">
             <a href="about.html"><h2>Be An Inspiration to Others</h2></a>
-            <img src="images/king2.png" width="210" height="210" alt="knowHimBetter"/>
-            <img src="images/king4.png" width="210" height="210" alt="kenneth"/>
+            <img src="images/king5.png" width="210" height="210" alt="knowHimBetter"/>
+            <img src="images/fam1.png" width="210" height="210" alt="kenneth"/>
             <p>"Dreams and dedication are a powerful combination." - William Longgood</p>
         
         </div>
