--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <a href="about.html"><h2>Be An Inspiration to Others</h2></a>
             <img src="images/king5.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/fam1.png" width="210" height="210" alt="kenneth"/>
+            <img src="images/king6.png" width="210" height="210" alt="kenneth"/>
+            
             <p>"Dreams and dedication are a powerful combination." - William Longgood</p>
         
         </div>
