--- a/skills.html
+++ b/skills.html
@@ -32,5 +32,13 @@
             <h2>Talent and Literary Arts</h2>
             <p>Folk Dancing • Tenor at Chorale Singing • Little Bit of Dance Sport • Fashion Design • Essay Writing • Spelling</p>
         </div>
+        
+        <div id="icons">
+            <a href="https://www.facebook.com/kennethkjc"><img src="images/fbicon.png" width="50" height="50" alt="fb icon"/></a>
+            <a href="https://twitter.com/kennethcelocia"><img src="images/twittericon.png" width="50" height="50" alt="twitter icon"/></a>
+            <a href="http://youtube.com"><img src="images/yticon.png" width="50" height="50" alt="yt icon"/></a>
+            <a href="https://www.instagram.com/kennethkjc/"><img src="images/igicon.png" width="45" height="45" alt="yt icon"/></a>
+        </div>
+        
     </body>
 </html>
