--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>"Dreams and dedication are a powerful combination." - William Longgood</p>
         </div>
         
-        <div>
+        <div id="detailsAtHome3">
             <a href="gallery.html"><h2>More on Gallery</h2></a>
             <img src="images/king6.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/king9.png" width="210" height="210" alt="kenneth"/>
