added anothe image

--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,7 @@
             <img src="images/king5.png" width="210" height="210" alt="kenneth"/>
             <img src="images/fam1.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king6.png" width="210" height="210" alt="kenneth"/>
+            <img src="images/king11.png" width="210" height="210" alt="kenneth"/>
             
             
             <h2>FRIENDS</h2>
