--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <img src="images/king6.png" width="210" height="210" alt="knowHimBetter"/>
             <img src="images/king9.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king10.png" width="210" height="210" alt="kenneth"/>
+            <p>More of his happy moments with family and friends.</p>
         </div>
         
         <div id="icons">
