--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
         
         <div id="mainAbout">
             <p>Photos captured are moments captured. Value them as much as how you value yourself and the people around you. </p>
-            <h2>SOLO</h2>
+            <h2 class="kennethcelocia_lowercase">SOLO</h2>
             <img src="images/king.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king2.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king3.png" width="210" height="210" alt="kenneth"/>
