--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
             <img src="images/king3.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king4.png" width="210" height="210" alt="kenneth"/>
             
-            <h2>FAMILY</h2>
+            <h2 class="kennethcelocia_lowercase">FAMILY</h2>
             <img src="images/king5.png" width="210" height="210" alt="kenneth"/>
             <img src="images/fam1.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king6.png" width="210" height="210" alt="kenneth"/>
