--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
             <img src="images/king11.png" width="210" height="210" alt="kenneth"/>
             
             
-            <h2>FRIENDS</h2>
+            <h2 class="kennethcelocia_lowercase">FRIENDS</h2>
             <img src="images/king7.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king10.png" width="210" height="210" alt="kenneth"/>
             <img src="images/king9.png" width="210" height="210" alt="kenneth"/>
