--- a/skills.html
+++ b/skills.html
@@ -23,7 +23,7 @@
         </div>
         
         <div id="mainAbout">
-            <h2>Computer Softwares and Programming Languages</h2>
+            <h2 class="kennethcelocia_lowercase">Computer Softwares and Programming Languages</h2>
             <p>Scratch • C++ • Java • Adobe Photoshop • SwishMax • Sony Vegas • HTML and CSS • Cisco Packet Tracer • Microsoft Office</p>
             
             <h2>Languages</h2>
