--- a/skills.html
+++ b/skills.html
@@ -26,7 +26,7 @@
             <h2 class="kennethcelocia_lowercase">Computer Softwares and Programming Languages</h2>
             <p>Scratch • C++ • Java • Adobe Photoshop • SwishMax • Sony Vegas • HTML and CSS • Cisco Packet Tracer • Microsoft Office</p>
             
-            <h2>Languages</h2>
+            <h2 class="kennethcelocia_lowercase">Languages</h2>
             <p>Cebuano • Filipino • English • Basic Spanish • Basic Russian • Basic Dutch</p>
             
             <h2>Talent and Literary Arts</h2>
