--- a/skills.html
+++ b/skills.html
@@ -29,7 +29,7 @@
             <h2 class="kennethcelocia_lowercase">Languages</h2>
             <p>Cebuano • Filipino • English • Basic Spanish • Basic Russian • Basic Dutch</p>
             
-            <h2>Talent and Literary Arts</h2>
+            <h2 class="kennethcelocia_lowercase">Talent and Literary Arts</h2>
             <p>Folk Dancing • Tenor at Chorale Singing • Little Bit of Dance Sport • Fashion Design • Essay Writing • Spelling</p>
         </div>
         
